PR/50827: Richard Hansen: Fix default variable assignment with arithmetic, from kre.